<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noes.adeyds.favoritemovies.DetailFavorites">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/dtl_backdrop"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dtl_backdrop"
        android:layout_margin="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"
                android:id="@+id/dtl_poster"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/dtl_poster"
                android:id="@+id/scrollView"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        style="@style/wrap"
                        android:text="@string/judul"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:id="@+id/dtl_judul"/>
                    <TextView
                        style="@style/wrap"
                        android:text="@string/date"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="right"
                        android:id="@+id/dtl_date"/>
                    <TextView
                        style="@style/wrap"
                        android:layout_marginVertical="20dp"
                        android:text="@string/overview"
                        android:id="@+id/dtl_desc"
                        />
                    <TextView
                        style="@style/wrap"
                        android:text="@string/review"
                        android:id="@+id/labelRev"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        style="@style/wrap"
                        android:id="@+id/dtl_review"
                        android:text="@string/revieu"/>


                </LinearLayout>
            </ScrollView>
            <TextView
                style="@style/wrap"
                android:text="@string/popularity"
                android:id="@+id/textPop"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_below="@id/dtl_poster"
                />
            <TextView
                style="@style/wrap"
                android:layout_below="@id/textPop"
                android:id="@+id/dtl_popular"
                android:text="@string/popular"/>

            <LinearLayout
                style="@style/wrap"
                android:id="@+id/contFav"
                android:layout_below="@id/dtl_popular"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/scrollView"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >
                <ImageView
                    style="@style/wrap"
                    android:src="@drawable/ic_star_border"
                    android:id="@+id/ic_fav"
                    android:layout_marginRight="5dp"/>
                <TextView
                    style="@style/wrap"
                    android:id="@+id/tv_fav"
                    android:text="@string/untapFav"/>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
